# zephyr-zigbee

./: .gitignore  CMakeLists.txt  ozone.jdebug  west.yml
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: main.c
